add-pgk: axios para uso da api

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
+    "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-dashed-line": "^1.1.0",
