--- a/ios/ifbankMobile/Info.plist
+++ b/ios/ifbankMobile/Info.plist
@@ -88,6 +88,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>pix.ttf</string>
 	</array>
 </dict>
 </plist>
