--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.66.4",
     "react-native-dashed-line": "^1.1.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-modal-translucent": "^5.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-step-indicator": "^1.0.3",
