--- a/ios/ifbankMobile/Info.plist
+++ b/ios/ifbankMobile/Info.plist
@@ -89,6 +89,13 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>pix.ttf</string>
+		<string>Mukta-Bold.ttf</string>
+		<string>Mukta-Light.ttf</string>
+		<string>Mukta-Medium.ttf</string>
+		<string>Mukta-Regular.ttf</string>
+		<string>Mukta-SemiBold.ttf</string>
+		<string>Ubuntu-Bold.ttf</string>
+		<string>Ubuntu-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
