--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.3"
   },
@@ -48,6 +49,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.5.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
