--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-dashed-line": "^1.1.0",
+    "react-native-drop-shadow": "^0.0.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-translucent": "^5.0.0",
