add: missing font from ubuntu

--- a/ios/ifbankMobile/Info.plist
+++ b/ios/ifbankMobile/Info.plist
@@ -96,6 +96,7 @@
 		<string>Mukta-SemiBold.ttf</string>
 		<string>Ubuntu-Bold.ttf</string>
 		<string>Ubuntu-Regular.ttf</string>
+		<string>Ubuntu-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
